Fix header overlap in mobile mode

--- a/packages/survey-core/src/default-theme/blocks/header.scss
+++ b/packages/survey-core/src/default-theme/blocks/header.scss
@@ -24,7 +24,7 @@
   & ~ div {
     .sd-body,
     .sv-body {
-      margin-top: var(--sjs2-spacing-negative-x500);
+      margin-top: var(--sjs2-spacing-negative-x700);
     }
   }
 }
